# pulseFM

./: .gitignore  README.md  README.voting.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  cloudflare-deploy.yml  cloudflare-validate.yml  deploy.yml
apps/encoder/: Dockerfile  docker-compose.yml  entrypoint.sh
apps/playback-worker/: README.md  pyproject.toml  wrangler.toml
apps/playback-worker/migrations/d1/: 0001_init.sql
apps/playback-worker/src/: entry.py
apps/playback-worker/src/pulsefm_playback_worker/: __init__.py  config.py  entry.py  helpers.py  orchestrator.py
apps/playback-worker/src/pulsefm_playback_worker/repositories/: __init__.py  song_repository.py
apps/playback-worker/tests/: test_orchestrator.py
apps/web/: README.md  auth.ts  package.json
apps/worker/: pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  queue.json  requirements.txt
backend/app/: config.py  main.py  storage.py
client/: README.md  auth.ts  package.json  proxy.ts  test.html
client/app/: globals.css  layout.tsx  page.tsx
client/components/: DotMatrixVisualizer.tsx  PlayerControls.tsx  RequestForm.tsx  StreamPlayer.tsx  SynthesizerPlayer.tsx  VotePanel.tsx  WaveformVisualizer.tsx
client/hooks/: useAudioAnalyser.ts  useAudioSlots.ts  useStreamPlayer.ts  useVote.ts
client/lib/: stream.ts  types.ts
cloudbuild/: deploy.yaml
cloudflare/: README.md  package-lock.json  package.json  wrangler.template.jsonc
cloudflare/migrations/: 0001_initial.sql
cloudflare/scripts/: render-config.mjs
cloudflare/src/: db.ts  index.ts  options.ts  session.ts  station-control.ts  types.ts  workflow.ts
docs/cloudflare/: PHASE2_BACKEND_MIGRATION.md  README.md
encoder/: Dockerfile  docker-compose.yml  entrypoint.sh
encoder/app/: main.py
functions/heartbeat-ingress/: main.py  requirements.txt
functions/heartbeat-receiver/: main.py  requirements.txt
functions/modal-dispatcher/: main.py  pyproject.toml  requirements.txt
scripts/: build_push_bootstrap_images.sh  seed_firestore.py
services/backend/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
services/backend/pulsefm_backend/: main.py
services/backend/pulsefm_backend/api/: requests.py  stream.py  tracks.py
services/backend/pulsefm_backend/core/: station.py
services/backend/pulsefm_backend/services/: modal_worker.py
services/encoder/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
services/encoder/pulsefm_encoder/: config.py  main.py
services/encoder/tests/: test_main.py
services/modal-dispatch-service/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
services/modal-dispatch-service/pulsefm_modal_dispatch_service/: config.py  main.py
services/playback-service/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
services/playback-service/pulsefm_playback_service/: config.py  main.py
services/playback-service/pulsefm_playback_service/domain/: constants.py  models.py  protocols.py
services/playback-service/pulsefm_playback_service/integrations/: events.py  redis_state.py  tasks.py
services/playback-service/pulsefm_playback_service/orchestrators/: refresh_next_song_orchestrator.py  startup_orchestrator.py  tick_orchestrator.py  vote_close_orchestrator.py
services/playback-service/pulsefm_playback_service/repositories/: firestore_repository.py
services/playback-service/pulsefm_playback_service/utils/: time.py  validation.py
services/playback-service/tests/: test_refresh_next_song_orchestrator.py  test_tick_orchestrator.py  test_vote_close_orchestrator.py
services/playback-stream/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
services/playback-stream/pulsefm_playback_stream/: config.py  main.py
services/playback-worker/: README.md  pyproject.toml
services/playback-worker/migrations/d1/: 0001_init.sql
services/playback-worker/src/: __init__.py  config.py  entry.py  helpers.py  orchestrator.py  song_repository.py
services/playback-worker/tests/: test_orchestrator.py
services/tally-worker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
services/tally-worker/pulsefm_tally_worker/: config.py  main.py
services/vote-api/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
services/vote-api/pulsefm_vote_api/: config.py  main.py  redis_keys.py
services/vote-api/tests/: test_dedupe.py
terraform/: .terraform.lock.hcl  README.md  apis.tf  artifact_registry.tf  backend.tf  cdn.tf  cloud_run.tf  cloudtasks.tf  eventarc.tf  functions.tf  iam.tf  locals.tf  oidc_vercel.tf  outputs.tf  providers.tf  pubsub.tf  redis.tf  secrets.tf  service_accounts.tf  storage.tf  terraform.tfvars  variables.tf  versions.tf
worker/: .dockerignore  .gitignore  Dockerfile  app.py  descriptors.json  docker-compose.yml  encoder.py  entrypoint.sh  generate.py  requirements.txt
worker/app/: __init__.py  (+1 more)
(+107 files in other folders)
