[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsefm-playback-worker"
version = "0.1.0"
description = "PulseFM Cloudflare playback worker."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
