[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsefm-tally-worker"
version = "0.1.0"
description = "PulseFM tally worker for Cloud Tasks."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "pulsefm-firestore",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pulsefm_tally_worker*"]
