[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsefm-vote-api"
version = "0.1.0"
description = "PulseFM vote API service."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "pulsefm-auth",
  "google-cloud-firestore",
  "google-cloud-storage",
  "pulsefm-tasks",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pulsefm_vote_api*"]
